--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
   </head>
   <body>
     <header>
-      <div><a href="index.html"</div>
+      <a href="index.html"><span>WEB</span><span>STUDIO</span></a>
+      <nav>
+        <ul>
+          <li><a href="#">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
+        </ul>
+      </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:=1100011111111">+11(000)111-11-11</a>
     </header>
-    <main></main>
+    <main>
+      <h1>Effective Solutions for Your Buisness</h1>
+    </main>
     <footer></footer>
   </body>
 </html>
